--- a/public/about.html
+++ b/public/about.html
@@ -8,31 +8,25 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>About Me!</title>
   </head>
   <body>
 	  <div class="container-fluid text-center">
 		  <div class="row">
 			  <div class="col">
-				  <img class="img-fluid" src="assets/images/top-splash.png" alt="Reversi logo"/>
+				  <h2>About</h2>
 			  </div>
 		  </div>
 
 	          <div class="row">
 			  <div class="col">
-				 <br> <a href="name.html" class="btn btn-lg btn-secondary">Let's play</a>
+				  <p>Lorem ipsum</p>
 			  </div>
 		  </div>
 
 		  <div class="row">
 			  <div class="col">
-				  <br> <img class="img-fluid" src="assets/images/bottom-splash.png" alt="Reversi logo 2" /> <br>
-			  </div>
-		  </div>
-
-		  <div class="row">
-			  <div class="col">
-				  <a href="about.html" class="btn btn-lg btn-info">About</a>
+				  <a href="index.html" class="btn btn-lg btn-info">Home</a>
 			  </div>
 
 			  <div class="col">
@@ -40,7 +34,6 @@
 			  </div>
 		  </div>
 		</div>
-
 
 
 		<p>Welcome to Jenni's attempt at coding!</p>
