--- a/public/lobby.html
+++ b/public/lobby.html
@@ -9,7 +9,7 @@
 
     <style>
         #header-row {
-          background-color: #FFF0BB;
+          background-color: #ECFFEC;
         }
     </style>
 
