--- a/public/name.html
+++ b/public/name.html
@@ -23,27 +23,25 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <title>Username</title>
   </head>
   <body>
-	  <div class="container-fluid text-center">
-		  <div class="row" id="header-row">
-			  <div class="col">
-				  <h2>Enter your Username</h2>
-			  </div>
-		  </div>
-		  <div class='row'>
-			  <div class='col'>
-				  <form onsubmit='submitForm(); return false' class='form-inline'>
-					  <div class='form-group'>
-						  <label for='username' class='col-form-label sr-only'>Enter your Username</label>
-						  <input class='form-control' type='text' value='' id='username' placeholder='Enter your username'/>
-					  </div>
-					  <button type='submit' class='btn btn-default btn-primary'>Done</button>
-				  </form>
-			  </div>
-		  </div>
+    <div class='container-fluid text-center'>
+			<div class='row' id='header-row'>
+				<div class='col'>
+					<h2>Enter Your User Name</h2>
+				</div>
+			</div>
+			<div class='row'>
+				<div class='col align-items-end'>
+					<form onsubmit='submitForm(); return false;' class='form-inline'>
+						<div class='form-group'>
+							<label for='username' class='col-form-label sr-only'>Enter your user name</label>
+							<input class='form-control' type='text' value='' id='username' placeholder='Enter your user name'/>
+						</div>
+						<button type='submit' class='btn btn-default btn-primary'>Done</button>
+					</form>
+				</div>
+			</div>
 		</div>
 
 
