--- a/public/lobby.html
+++ b/public/lobby.html
@@ -8,8 +8,9 @@
 
     <style>
         #header-row {
-          background-color: #ECFFEC;
+          background-color: #4AA0B5;
         }
+
     </style>
 
     <!-- Bootstrap CSS -->
@@ -20,12 +21,12 @@
     <div class='container-fluid text-center'>
       <div class='row' id='header-row'>
         <div class='col'>
-            <h2>Lobby</h2>
+            <h2 style=color:white;>Lobby</h2>
           </div>
       </div>
     <div class='row' id='header-row'>
       <div class='col'>
-        <h3>Messages</h3>
+        <h3 style=color:white;>Messages</h3>
         <div id='messages'>
         </div>
       </div>
