--- a/public/name.html
+++ b/public/name.html
@@ -9,7 +9,8 @@
 
     <style>
         #header-row {
-          background-color: #FFF0BB;
+          background-color: #4AA0B5;
+          color: white;
         }
     </style>
 
@@ -23,16 +24,18 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
   </head>
   <body>
     <div class='container-fluid text-center'>
 			<div class='row' id='header-row'>
 				<div class='col'>
-					<h2>Enter Your User Name</h2>
+					<h2 style=color:white;>Enter Your User Name</h2>
 				</div>
 			</div>
 			<div class='row'>
 				<div class='col align-items-end'>
+          <br>
 					<form onsubmit='submitForm(); return false;' class='form-inline'>
 						<div class='form-group'>
 							<label for='username' class='col-form-label sr-only'>Enter your user name</label>
