--- a/public/lobby.html
+++ b/public/lobby.html
@@ -19,26 +19,41 @@
 
   <body>
     <div class='container-fluid text-center'>
-      <div class='row' id='header-row'>
-        <div class='col'>
-            <h2 style=color:white;>Lobby</h2>
-          </div>
-      </div>
-    <div class='row' id='header-row'>
-      <div class='col'>
-        <h3 style=color:white;>Messages</h3>
-        <div id='messages'>
+        <div class='row' id='header-row'>
+            <div class='col'>
+                <h2 style=color:white;>Lobby</h2>
+              </div>
         </div>
-      </div>
-    </div>
-  </div>
+        <div class='row'>
+            <div class='col'>
+                <h3>Messages</h3>
+                <div id='messages'>
+            </div>
+            </div>
+        </div>
+        <div class='row'>
+            <div class='col'>
+                <form onsubmit='send_message(); return false;'>
 
+                  <div class='form-group'>
+                      <label for='send_message_holder' class='col-form-label sr-only'>Enter your chat message</label>
+                      <input class='form-control' type='text' value='' id='send_message_holder' placeholder='Enter your chat message' />
+                  </div>
+
+                  <button type='submit' class='btn btn-default btn-primary'>Send</button>
+                </form>
+            </div>
+        </div>
+
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src='https://code.jquery.com/jquery-3.5.1.slim.min.js' integrity='sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj' crossorigin='anonymous'></script>
     <script src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js' integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo' crossorigin='anonymous'></script>
     <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js' integrity='sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI' crossorigin='anonymous'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" integrity="sha256-bQmrZe4yPnQrLTY+1gYylfNMBuGfnT/HKsCGX+9Xuqo=" crossorigin="anonymous"></script>
+
 
 <script src='js/main.js'>
 </script>
